--- a/app/globals.css
+++ b/app/globals.css
@@ -76,8 +76,13 @@
   * {
     @apply border-gray-200;
   }
+
+  html {
+    @apply scroll-smooth;
+  }
+
   body {
-    @apply bg-slate-100 text-slate-800;
+    @apply bg-slate-100 text-slate-900;
   }
 }
 
